# team_totem

./: .gitignore  Procfile  README.md  env.txt  manage.py  pyproject.toml  requirements.txt
artifacts/: admin.py  models.py  urls.py  views.py
artifacts/migrations/: 0001_initial.py  0002_auto_20201130_2130.py  0003_artifact_pub_date.py  0004_auto_20201201_1018.py  0005_auto_20201201_1019.py  0006_artifact_discovered_by.py  0007_auto_20201201_1125.py  0008_artifact_image.py  0009_auto_20201201_1205.py  0010_auto_20201201_1208.py  0011_auto_20201201_1211.py  0012_auto_20201201_1420.py  0013_auto_20201203_1112.py
artifacts/static/: app.css
artifacts/static/artifacts/: app.css
artifacts/templates/: base.html
artifacts/templates/artifacts/: about.html  artifacts.html  discovered.html  locations.html  singleartifact.html  singlelocation.html
totems/: asgi.py  settings.py  urls.py  wsgi.py
