[tool.poetry]
name = "totems"
version = "0.1.0"
description = ""
authors = ["Joe Bentley <joe.bentley.20@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.3"
Pillow = "^8.0.1"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
python-decouple = "^3.3"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
